syntax = "proto3";
package controllerClient;
option go_package = "github.com/waterme7on/openGauss-operator/rpc/protobuf";

// Interface exported by the server.
service OpenGaussController {
  rpc Scale(ScaleRequest) returns (ScaleResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
}

message ScaleRequest {
  string openGaussObjectKey = 1;  // namespace/name, e.g.: "default/test-openGauss"
  int32 masterReplication = 2;
  int32 workerSmallReplication = 3;
  int32 workerMidReplication = 4;
  int32 workerLargeReplication = 5;
}

message ScaleResponse {
  bool success = 1;
}

message GetRequest {
  string openGaussObjectKey = 1;  // namespace/name, e.g.: "default/test-openGauss"
}

message GetResponse {
  bool success = 1;
  int32 masterReplication = 2;
  int32 workerSmallReplication = 3;
  int32 workerMidReplication = 4;
  int32 workerLargeReplication = 5;
}